<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>co.casterlabs</groupId>
	<artifactId>Katana</artifactId>
	<version>PLACEHOLDER</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>shade</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<finalName>${project.name}</finalName>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>co.casterlabs.katana.Launcher</mainClass>
						</transformer>
					</transformers>
					<artifactSet>
						<excludes>
							<exclude>org.bouncycastle:*</exclude>
						</excludes>
					</artifactSet>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<finalName>${project.name}</finalName>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>casterlabs-maven</id>
			<url>https://repo.casterlabs.co/maven</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId> <!-- For Eclipse users -->
			<artifactId>annotations</artifactId>
			<version>19.0.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- Http-Server -->
		<dependency>
			<groupId>co.casterlabs</groupId>
			<artifactId>rakurai-http-server</artifactId>
			<version>acfa4c5</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>co.casterlabs</groupId>
			<artifactId>Rson</artifactId>
			<version>1.18.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.github.hakky54</groupId>
			<artifactId>sslcontext-kickstart</artifactId>
			<version>8.3.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.github.hakky54</groupId>
			<artifactId>sslcontext-kickstart-for-pem</artifactId>
			<version>8.3.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.shredzone.acme4j</groupId>
			<artifactId>acme4j-client</artifactId>
			<version>3.3.0</version>
			<scope>compile</scope>
		</dependency>

		<!-- For servlets -->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>4.10.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
			<version>1.5.7</version>
			<scope>compile</scope>
		</dependency>
		<!-- <dependency>
			<groupId>com.github.casterlabs</groupId>
			<artifactId>Miki</artifactId>
			<version>0458366</version>
			<scope>compile</scope>
		</dependency> -->

		<!-- These are loaded at run-time -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>1.78.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>1.78.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpg-jdk18on</artifactId>
			<version>1.78.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- Utilities -->
		<dependency>
			<groupId>co.casterlabs.commons</groupId>
			<artifactId>async</artifactId>
			<version>1.8.0-1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>co.casterlabs.commons</groupId>
			<artifactId>functional</artifactId>
			<version>1.8.0-1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>co.casterlabs.commons</groupId>
			<artifactId>io</artifactId>
			<version>1.8.0-1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.e3ndr</groupId>
			<artifactId>Consolidate</artifactId>
			<version>1.0.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.3.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.e3ndr</groupId>
			<artifactId>FastLoggingFramework</artifactId>
			<version>1.12.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.e3ndr</groupId>
			<artifactId>ReflectionLib</artifactId>
			<version>1.1.0</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>